# src/routes/users.routes.js
@@ -1,5 +1,8 @@
 const express = require('express');
+const authenticate = require('../middleware/authenticate');
+const upload = require('../middleware/uploadMedia');
 const getUserController = require('../controllers/users/getUserController');
+const updateUserController = require('../controllers/users/updateUserController');
 const listUserThreadsController = require('../controllers/users/listUserThreadsController');
 const listUserRepostsController = require('../controllers/users/listUserRepostsController');
 
@@ -23,6 +26,46 @@ const router = express.Router();
  *         description: User detail
  */
 router.get('/:userId', getUserController);
+
+/**
+ * @openapi
+ * /users/{userId}:
+ *   patch:
+ *     tags:
+ *       - Users
+ *     summary: Update user profile
+ *     security:
+ *       - bearerAuth: []
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         multipart/form-data:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               email:
+ *                 type: string
+ *               username:
+ *                 type: string
+ *               name:
+ *                 type: string
+ *               removeProfilePicture:
+ *                 type: boolean
+ *               profilePicture:
+ *                 type: string
+ *                 format: binary
+ *                 description: New profile picture image
+ *     responses:
+ *       200:
+ *         description: Updated user profile
+ */
+router.patch('/:userId', authenticate, upload.single('profilePicture'), updateUserController);
 
 /**
  * @openapi
